# lyrahos

./: CHANGELOG.md  Containerfile.dev  Containerfile.main  Containerfile.testing  LICENSE  README.md  build.md  update-metadata.json
.copr/: Makefile
.github/workflows/: build-images.yml  build-iso.yml  release.yml  test-iso.yml
blueprints/: lyrah-base.toml  lyrah-desktop.toml  lyrah-luna.toml
configs/common/: 71-luna-controller.rules  brave-flags.conf  lyrah-gpu-env.sh  lyrah-wine.sh  lyrah.conf
configs/desktop-mode/: plasma.desktop
configs/luna-mode/: luna-mode.desktop
docs/: DIAGNOSTICS.md  USER-GUIDE.md
installer/: calamares-autostart.desktop  install-lyrah.desktop  lyrah-installer.desktop
installer/calamares/: settings.conf
installer/calamares/branding/lyrah/: branding.desc  show.qml  stylesheet.qss
installer/calamares/modules/: bootloader.conf  locale.conf  lyrah-session.conf  netinstall.conf  packagechooser@lyrah-session.conf  partition.conf  shellprocess.conf  shellprocess@bootloader-setup.conf  shellprocess@kernel-setup.conf  users.conf  welcome.conf
installer/calamares/modules/lyrah-session/: main.py  module.desc
installer/scripts/: configure-session.sh  install-bootloader.sh  post-install.sh  setup-kernel.sh
kickstart/: lyrah-dev.ks  lyrah-main.ks  lyrah-testing.ks
logging/: logrotate-lyrah.conf
luna-ui/: CMakeLists.txt  Integration.md  README.md  luna-ui.spec
luna-ui/database/: schema.sql
luna-ui/docs/: API.md  ARCHITECTURE.md  THEMING.md
luna-ui/qml/: Main.qml
luna-ui/qml/components/: BrowserOverlay.qml  ControllerProfileEditor.qml  EpicSetupWizard.qml  GameCard.qml  GameDetailView.qml  GameStoreDetailPopup.qml  GameStorePage.qml  HeroSection.qml  NavBar.qml  SearchBar.qml  SteamSetupWizard.qml  StoreGameCard.qml  VirtualKeyboard.qml
luna-ui/qml/views/: GamesView.qml  MediaView.qml  SettingsView.qml  StoreView.qml
luna-ui/resources/: gamecontrollerdb.txt
luna-ui/resources/themes/: amoled-black.json  cyber-neon.json  forest-green.json  nebula-dark.json  space-purple.json  sunset-orange.json
luna-ui/src/: artworkmanager.cpp  artworkmanager.h  browserbridge.cpp  browserbridge.h  controllermanager.cpp  controllermanager.h  credentialstore.cpp  credentialstore.h  database.cpp  database.h  gamemanager.cpp  gamemanager.h  main.cpp  profileresolver.cpp  profileresolver.h  storeapimanager.cpp  storeapimanager.h  storebackend.h  thememanager.cpp  thememanager.h
luna-ui/src/storebackends/: custombackend.cpp  custombackend.h  epicbackend.cpp  epicbackend.h  heroicbackend.cpp  heroicbackend.h  lutrisbackend.cpp  lutrisbackend.h  steambackend.cpp  steambackend.h
scripts/: configure-gpu.sh  detect-primary-gpu.sh  first-boot.sh  luna-session  lyrah-boot-logger  lyrah-configure-autologin  lyrah-crash-monitor  lyrah-desktop-session  lyrah-installer-session  lyrah-kwin-wrapper.sh  lyrah-switch-mode  lyrah-update  lyrah-upload-log  remaster-iso.sh
system/: luna-mode-logger.service  lyrah-boot-logger.service  lyrah-crash-monitor.service  lyrah-first-boot.service  lyrah-update.service  lyrah-update.timer
themes/plymouth/lyrah/: lyrah.plymouth  lyrah.script
themes/sddm/lyrah-space/: Main.qml  metadata.desktop  theme.conf
